Tags e deletar card, finalizado

--- a/board/board.html
+++ b/board/board.html
@@ -161,26 +161,26 @@
     </div>
   </div>
 
-    <!-- Modal Apagar Card-->
-    <div class="modal fade" id="excluirCard">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Tem certeza que deseja excluir esse Cartão?</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-                Ao excluir Cartão você perderá todos o seus comentários e tags.
-              </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Sim</button>
-            </div>
-          </div>
+  <!-- Modal Apagar Card-->
+  <div class="modal fade" id="excluirCard">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Tem certeza que deseja excluir esse Cartão?</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Ao excluir Cartão você perderá todos o seus comentários e tags.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="excluirCard()">Sim</button>
         </div>
       </div>
+    </div>
+  </div>
 
   <!-- Modal Inside Card -->
   <div class="modal fade" id="modalCard">
@@ -194,38 +194,30 @@
           </button>
         </div>
         <div class="modal-body position-relative">
-          <div class="h5">Tags</div>
-          <ul class="list-group list-group-horizontal mb-3">
-            <li class=" d-inline-block m-1 p-0">
-              <button class="btn btn-tags bg-info"></button>
-            </li>
-            <li class=" d-inline-block m-1 p-0">
-              <button class="btn btn-tags bg-warning"></button>
-            </li>
-            <li class=" d-inline-block m-1 p-0">
-              <button class="btn btn-tags bg-success"></button>
-            </li>
-            <li class=" d-inline-block m-1 p-0 ">
+          <div class="h5">Etiquetas</div>
+          <ul class="list-group list-group-horizontal mb-3" id="ulTags">
+
+            <li class="d-inline-block m-1 p-0" id="addTag">
               <div class="dropdown">
-                <button class="btn btn-tags" id="addTag" data-toggle="dropdown" style="background-color: rgb(194, 194, 194);">
+                <button class="btn btn-tags" data-toggle="dropdown" style="background-color: rgb(194, 194, 194);">
                   <img src="../imagens/add.png">
                 </button>
-                  <div class="dropdown-menu dropdown-menu-left">
-                    <ul class="dropdown-item list-group list-group-horizontal px-2">
-                      <li class="d-inline-block m-1 p-0">
-                        <button class="btn btn-tags bg-info"></button>
-                      </li>
-                      <li class="d-inline-block m-1 p-0">
-                          <button class="btn btn-tags bg-success"></button>
-                      </li>
-                      <li class="d-inline-block m-1 p-0">
-                          <button class="btn btn-tags bg-warning"></button>
-                      </li>
-                      <li class="d-inline-block m-1 p-0">
-                          <button class="btn btn-tags bg-danger"></button>
-                      </li>
-                    </ul>
-                  </div>
+                <div class="dropdown-menu dropdown-menu-left">
+                  <ul class="list-group list-group-horizontal px-2">
+                    <li class="d-inline-block m-1 p-0">
+                      <button class="btn btn-tags bg-info" id="bg-info"></button>
+                    </li>
+                    <li class="d-inline-block m-1 p-0">
+                      <button class="btn btn-tags bg-success" id="bg-success"></button>
+                    </li>
+                    <li class="d-inline-block m-1 p-0">
+                      <button class="btn btn-tags bg-warning" id="bg-warning"></button>
+                    </li>
+                    <li class="d-inline-block m-1 p-0">
+                      <button class="btn btn-tags bg-danger" id="bg-danger"></button>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
@@ -242,23 +234,24 @@
           </ul>
           <h6 id="resizeTextComent"></h6>
           <textarea class="mb-2" id="textComent" placeholder="Escrever um comentário"></textarea>
-            <form id="formDadosCard">
-              <div class="form-group w-25">
-                <h6>Mudar Data do Cartão</h6>
-                <input class="form-control" type="date" id="dataCard" min="2000-01-01" max="3000-12-31" required>
-              </div>
-              <div class="form-group w-25">
-                <h6>Mudar o Cartão de lista:</h6>
-                <select class="form-control" id="selectListas">
-                  <option value="1">1 (lista atual)</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                </select>
-              </div>
-            </form>
+          <form id="formDadosCard">
+            <div class="form-group w-25">
+              <h6>Mudar Data do Cartão</h6>
+              <input class="form-control" type="date" id="dataCard" min="2000-01-01" max="3000-12-31" required>
+            </div>
+            <div class="form-group w-25">
+              <h6>Mudar o Cartão de lista:</h6>
+              <select class="form-control" id="selectListas">
+                <option value="1">1 (lista atual)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+              </select>
+            </div>
+          </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#excluirCard">Excluir Cartão</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
+            data-target="#excluirCard">Excluir Cartão</button>
           <button type="button" class="btn btn-primary" data-dismiss="modal">Fechar e salvar</button>
         </div>
       </div>
