--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- my CSS -->
     <link rel="stylesheet" href="login.css">
-    <link rel="shortcut icon" href="imagens/9988images.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/4275flaticon.ico" type="image/x-icon">
     
     <title>Trellei</title>
     
