--- a/user/mainpage.html
+++ b/user/mainpage.html
@@ -11,7 +11,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- my CSS -->
   <link rel="stylesheet" href="mainpage.css">
-  <link rel="shortcut icon" href="../imagens/9988images.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../imagens/4275flaticon.ico" type="image/x-icon">
 
   <title>Home | Trellei</title>
 </head>
