--- a/board/board.html
+++ b/board/board.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="board.css">
   <link rel="shortcut icon" href="../imagens/4275flaticon.ico" type="image/x-icon">
   <title></title>
@@ -41,7 +41,8 @@
             <a class="dropdown-item" id="Logout" href="#">Sair da conta</a>
           </div>
         </div>
-      </div> <!-- NAV BAR-->
+      </div>
+      <!-- NAV BAR-->
 
       <div class="container-fluid position-fixed overflow-auto pb-5" id="insideBoard">
         <div class="row">
@@ -57,40 +58,31 @@
                 <div class="dropdown-menu dropdown-menu-left">
                   <ul class="row p-0 justify-content-center list-group list-group-horizontal">
                     <li class="col-3 d-inline-block m-1 p-0">
-                      <button class="btn btn-colors" onclick="changeColor(this)"
-                        style="background-color: rgb(0, 121, 191);"></button>
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(0, 121, 191);"></button>
                     </li>
                     <li class="col-3 d-inline-block m-1 p-0">
-                      <button class="btn btn-colors" onclick="changeColor(this)"
-                        style="background-color: rgb(210, 136, 52);"></button>
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(210, 136, 52);"></button>
                     </li>
                     <li class="col-3 d-inline-block m-1 p-0 ">
-                      <button class="btn btn-colors" onclick="changeColor(this)"
-                        style="background-color: rgb(81, 152, 57);"></button>
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(81, 152, 57);"></button>
                     </li>
                     <li class="col-3 d-inline-block m-1 p-0 ">
-                      <button class="btn btn-colors" onclick="changeColor(this)"
-                        style="background-color: rgb(176, 70, 50);"></button>
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(176, 70, 50);"></button>
                     </li>
                     <li class="col-3 d-inline-block m-1 p-0 ">
-                      <button class="btn btn-colors" onclick="changeColor(this)"
-                        style="background-color: rgb(137, 96, 158);"></button>
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(137, 96, 158);"></button>
                     </li>
                     <li class="col-3 d-inline-block m-1 p-0 ">
-                      <button class="btn btn-colors" onclick="changeColor(this)"
-                        style="background-color: rgb(205, 90, 145);"></button>
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(205, 90, 145);"></button>
                     </li>
                     <li class="col-3 d-inline-block m-1 p-0 ">
-                      <button class="btn btn-colors" onclick="changeColor(this)"
-                        style="background-color: rgb(75, 191, 107);"></button>
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(75, 191, 107);"></button>
                     </li>
                     <li class="col-3 d-inline-block m-1 p-0 ">
-                      <button class="btn btn-colors " onclick="changeColor(this)"
-                        style="background-color: rgb(0, 174, 204);"></button>
+                      <button class="btn btn-colors " onclick="changeColor(this)" style="background-color: rgb(0, 174, 204);"></button>
                     </li>
                     <li class="col-3 d-inline-block m-1 p-0 ">
-                      <button class="btn btn-colors" onclick="changeColor(this)"
-                        style="background-color: rgb(131, 140, 145);"></button>
+                      <button class="btn btn-colors" onclick="changeColor(this)" style="background-color: rgb(131, 140, 145);"></button>
                     </li>
                   </ul>
                 </div>
@@ -99,27 +91,56 @@
                 <button class="btn btn-headers" data-toggle="modal" data-target="#excluirQuadro">Excluir Quadro</button>
               </div>
             </div>
-          </div> <!-- Col -->
-        </div> <!-- Row -->
+          </div>
+          <!-- Col -->
+        </div>
+        <!-- Row -->
 
         <div class="row">
           <div class="col col-12 p-2">
-            <ul
-              class="row list-group list-group-horizontal justify-content-center justify-content-md-start justify-content-lg-start justify-content-xl-start"
+            <ul class="row list-group list-group-horizontal justify-content-center justify-content-md-start justify-content-lg-start justify-content-xl-start"
               id="allListas">
 
-              <li class="col col col-11 col-sm-5 col-md-3 col-lg-3 col-xl-2 text-nao-selecionavel" id="liCriarLista"
-                onclick="hideOrShow('spanAddLista', 'none')" data-toggle="collapse" href="#divFormLista">
+              <li class="lista flex-column col col col-11 col-sm-5 col-md-3 col-lg-3 col-xl-2" id="33332">
+                <div class="divNomeLista align-items-center">
+                  <h6 class="nome-lista-resize" id="textNameResize33332" style="width: 241.063px;">To Do</h6>
+                  <textarea class="nome-lista" id="textName33332" spellcheck="false" maxlength="100" name="To Do"
+                    style="height: 45px; width: 241.063px;">AAAAAAAAA</textarea>
+                  <!--  prototipo do delete card  -->
+                    <button type="button" class="btn delete-icon">
+                      <img src="../imagens/delete.png" alt="">
+                    </button>
+                </div>
+                <div class="overflow-auto div-cards" id="divCards33332"></div>
+                <div class="card add-card text-nao-selecionavel" id="divAddCard33332" onclick="hideOrShow('spanAddCard33332', 'none')"
+                  data-toggle="collapse" href="#divFormCard33332">
+                  <span id="spanAddCard33332" class="span-Add-Card">+ Adicionar cartão</span>
+                  <div class="collapse px-0 position-relative" id="divFormCard33332" onclick="event.stopPropagation()">
+                    <form method="post" id="formNovoCard33332">
+                      <h6 class="resize-textarea" id="resizeTextarea33332"></h6>
+                      <textarea autofocus="" class="form-control mr-1 textarea-nome-do-card" id="inputNomeDoCard33332"
+                        placeholder="Titulo do cartão..." required="" maxlength="100"></textarea>
+                      <div class="d-flex justify-content-between">
+                        <input type="submit" class="mt-2 form-control btn-Criar-Card btn" id="btnCriarCard33332" value="Criar">
+                        <button type="button" class="close mr-1" aria-label="Close" onclick="resetForm('spanAddCard33332','btnCriarCard33332', 'formNovoCard33332', 'divFormCard33332')">
+                          <span aria-hidden="true">×</span>
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </li>
+
+              <li class="col col col-11 col-sm-5 col-md-3 col-lg-3 col-xl-2 text-nao-selecionavel" id="liCriarLista" onclick="hideOrShow('spanAddLista', 'none')"
+                data-toggle="collapse" href="#divFormLista">
                 <div class="card" id="cardAddList">
                   <span id="spanAddLista">+ Adicionar Lista</span>
                   <div class="collapse" id="divFormLista" onclick="event.stopPropagation()">
                     <form method="post" id="formNovaLista">
-                      <input autofocus type="text" class="form-control mr-1" id="inputNomeDaLista"
-                        placeholder="Nome da lista" required maxlength="30">
+                      <input autofocus type="text" class="form-control mr-1" id="inputNomeDaLista" placeholder="Nome da lista" required maxlength="30">
                       <div class="d-flex justify-content-between">
                         <input type="submit" class="btn mt-2 form-control" id="btnCriarLista" value="Criar">
-                        <button type="button" class="close mr-1" aria-label="Close"
-                          onclick="resetForm('spanAddLista','btnCriarLista', 'formNovaLista', 'divFormLista')">
+                        <button type="button" class="close mr-1" aria-label="Close" onclick="resetForm('spanAddLista','btnCriarLista', 'formNovaLista', 'divFormLista')">
                           <span aria-hidden="true">&times;</span>
                         </button>
                       </div>
@@ -134,8 +155,10 @@
 
       </div>
 
-    </div><!-- CONTEINER MAIN -->
-  </div><!-- background -->
+    </div>
+    <!-- CONTEINER MAIN -->
+  </div>
+  <!-- background -->
 
   </div>
 
@@ -228,8 +251,7 @@
               </select>
             </div>
             <div class="modal-footer mt-5">
-              <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal"
-                data-target="#excluirCard">Excluir Cartão</button>
+              <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#excluirCard">Excluir Cartão</button>
               <button type="submit" class="btn btn-primary">Fechar e salvar</button>
               <button type="button" id="closeModal" hidden class="btn" data-dismiss="modal"></button>
             </div>
@@ -243,14 +265,11 @@
   <script src="board.js"></script>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 </body>
 
