add logo no login

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="row justify-content-md-center" id="divGridLayout">
+      <div class="row justify-content-center" id="divGridLayout">
         <!-- Alerts -->
         <div class="alert alert-warning col-sm-12 col-md-12 col-lg-12" id="alertErroLogin">
           <button type="button" class="close" id="btnErroLogin">
@@ -36,7 +36,9 @@
           </button> <h5>Novo usuário cadastrado com sucesso!</h5>
         </div>
         <!-- -->
-
+        <div class="col col-12 mt-5" id="Logo">
+          <img src="imagens/Trellei.png" class="bg-primary px-3 py-2" alt="Trellei">
+        </div>
         <!-- Div Login -->
         <div class="col col-sm-12 col-md-8 col-lg-8" id="divLogin"> 
           <h1>Fazer Login</h1>
