alterações no css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <img src="imagens/Trellei.png" class="bg-primary px-3 py-2" alt="Trellei">
         </div>
         <!-- Div Login -->
-        <div class="col col-sm-12 col-md-8 col-lg-8" id="divLogin"> 
+        <div class="col col-sm-12 col-md-8 col-lg-8 mt-5" id="divLogin"> 
           <h1>Fazer Login</h1>
           <div id="divA">
             <a id="mostrarCadastro" href="#">Criar uma conta</a>     
@@ -63,7 +63,7 @@
         </div>
 
         <!-- Div Cadastro -->
-        <div class="col col-sm-12 col-md-8 col-lg-8" id="divCadastro">
+        <div class="col col-sm-12 col-md-8 col-lg-8 mt-5" id="divCadastro">
           <h1>Criar uma Conta</h1>
           <div id="divA">
             <a id="mostrarLogin" href="#">Fazer login</a>     
