--- a/user/mainpage.html
+++ b/user/mainpage.html
@@ -92,7 +92,7 @@
 
               <li class="col col-6 col-sm-4 col-md-4 col-lg-4 col-xl-3 list-group-item">
                 <div class="quadro px-2" id="criarQuadro">
-                  <span>+ Criar novo quadro</span>
+                  <span>+ Criar novo Quadro</span>
                 </div>
               </li>
             </ul>
