--- a/board/board.html
+++ b/board/board.html
@@ -227,7 +227,7 @@
           <ul class="list-group mb-3" id="comentsList">
           </ul>
           <h6 id="resizeTextComent"></h6>
-          <textarea class="mb-2" id="textComent" placeholder="Escrever um comentário" maxlength="500"></textarea>
+          <textarea class="mb-2" id="textComent" placeholder="Comentário (Aperte Enter para Enviar)" maxlength="500"></textarea>
           <form id="formDadosCard">
             <div class="form-group">
               <h6>Mudar Data do Cartão</h6>
