feat: finalizes login, starts consuming new users endpoint on mainpage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="alert col-sm-12 col-md-12 col-lg-12 mt-2" id="alertDiv">
           <button type="button" class="close" id="btnCloseAlert">
            <span aria-hidden="true">&times;</span>
-          </button> <h4 class="alert-heading" id="alertHeading"></h4>
+          </button> <h3 class="alert-heading h3" id="alertHeading"></h3>
         </div>
         
          <!-- Logo -->
